fix-config-securityy